Modified UI design

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,26 +1,12 @@
-<footer>
-  <div class="footer-menu">
-    <a class="footer-item" href="privacy.html">Privacy & Cookies</a>
-    <a class="footer-item" href="help.html">Help</a>
-    <a class="footer-item" href="feedback.html">Feedback</a>
-    <a class="footer-item" href="advertise.html">Advertise</a>
+<footer style="position: fixed; bottom: 0; left: 0; width: 100%; padding: 10px 0; font-size: 15px; color: black; border: 2px solid black; background-color: lightgoldenrodyellow; border-radius: 0 0 15px 15px; text-align: center;">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <p style="margin-bottom: 0;">&copy; 2023 SearchTool</p>
+      </div>
+      <div class="col">
+        <p style="margin-bottom: 0;">Version 1.0</p>
+      </div>
+    </div>
   </div>
 </footer>
-
-<style>
-  .footer-menu {
-    display: flex;
-    justify-content: center;
-  }
-
-  .footer-item {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #333;
-    margin: 5px;
-    text-decoration: none;
-    color: #fff;
-    border-radius: 4px;
-  }
-</style>
-
