--- a/templates/home.html
+++ b/templates/home.html
@@ -11,8 +11,9 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      margin-top: 10px; /* Add margin to accommodate the hamburger icon */
-      position: relative; /* Add relative positioning to the body */
+      margin-top: 10px;
+      position: relative;
+      padding-bottom: 100px; /* Add some padding to accommodate the search results */
     }
     
     #Search {
@@ -58,7 +59,7 @@
     .dropdown,
     .dropdown-teams {
       position: absolute;
-      top: 30px; /* Adjust the top value as needed */
+      top: 30px;
       right: 10px;
       padding: 10px;
       background-color: white;
@@ -94,8 +95,8 @@
     }
     
     .welcome-message {
-      display: flex; /* Add flex container */
-      align-items: center; /* Center items vertically */
+      display: flex;
+      align-items: center;
       position: absolute;
       top: 0;
       left: 10px;
@@ -119,6 +120,42 @@
       background-color: rgba(255, 255, 255, 0.1);
       padding: 5px 10px;
     }
+
+    /* Mobile Styles */
+    @media (max-width: 767px) {
+      .hamburger-icon {
+        top: 10px;
+        right: 10px;
+        width: 30px;
+        height: 4px;
+      }
+    
+      .hamburger-icon::before,
+      .hamburger-icon::after {
+        width: 30px;
+        height: 4px;
+      }
+    
+      .dropdown,
+      .dropdown-teams {
+        top: 40px;
+        right: 10px;
+        padding: 10px;
+      }
+
+      .button-group {
+        top: 50px;
+        right: 10px;
+        width: 100%;
+        justify-content: center;
+      }
+    
+      .button-group button {
+        margin: 5px;
+        width: 100%;
+        max-width: 200px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -127,7 +164,7 @@
     <div class="container">
     </div>
   </div>
-   {% include 'footer.html' %}
+  {% include 'footer.html' %}
   
   <div class="welcome-message">
     <h2>Welcome to SearchTool!</h2>
@@ -150,6 +187,8 @@
     <a href="#">Feedback</a>
     <a href="#">Help</a>
   </div>
+
+  <div id="searchResults"></div>
 
   <script>
     var hamburgerIcon = document.querySelector(".hamburger-icon");
