--- a/templates/nav.html
+++ b/templates/nav.html
@@ -231,7 +231,7 @@
         <input id="saveButton" type="button" value="Save">
       </div>
       <div class="search-button-container">
-        <input id="removeButton" type="button" value="Remove">
+        <input id="removeButton" type="button" value="Remove" onclick="removeSearch()">
       </div>
       <div class="search-button-container">
         <input id="resetButton" type="button" value="Reset">
@@ -240,6 +240,8 @@
     <input type="hidden" id="resultsInput" name="results" value="">
     <input type="hidden" name="query" id="queryInput">
     <input type="hidden" name="results" id="resultsInput">
+    <div id="successMessage" style="display: none;">Search results successfully removed!</div>
+    <a href="/static/SearchTool.xlsm" download>Download Excel</a>
   </form>
 
   <div id="searchResults"></div>
@@ -332,8 +334,8 @@
     });
 
     document.getElementById("removeButton").addEventListener("click", function() {
-      remove();
-    });
+  removeSearch();
+});
 
     function save() {
       var query = document.getElementById("test").getElementsByTagName("input")[0].value;
@@ -345,11 +347,11 @@
       document.getElementById("searchform").submit();
     }
 
-    function remove() {
+    function removeSearch() {
       var query = document.getElementById("test").getElementsByTagName("input")[0].value;
-
+    
       document.getElementById("queryInput").value = query;
-
+    
       fetch("/remove", {
         method: "POST",
         body: new URLSearchParams({
@@ -360,7 +362,13 @@
           return response.text();
         })
         .then(function() {
-          // Handle success if needed
+          // Show success message
+          var successMessage = document.getElementById("successMessage");
+          successMessage.style.display = "block";
+          successMessage.innerText = "Search results successfully removed!";
+              
+          // Reload the page or redirect to the homepage
+          window.location.href = "/";
         })
         .catch(function(error) {
           console.error(error);
