Added config file

--- a/templates/home.html
+++ b/templates/home.html
@@ -161,6 +161,7 @@
 <body>
   <div id="websiteContent">
     {% include 'nav.html' %}
+    {% include 'social_media.html' %}
     <div class="container">
     </div>
   </div>
